[project]
name = "minigun-soren-n"
description = "A library for property-based testing of Python programs"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Soren Norbaek", email = "sorennorbaek@gmail.com" }
]
keywords = [
    "property-based testing",
    "testing",
    "python",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
dependencies = [
    "returns>=0.25.0",
    "tqdm>=4.67.1",
    "typeset-soren-n>=2.0.8",
]

[project.urls]
Repository = "https://github.com/soren-n/minigun"
Documentation = "https://minigun.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/soren-n/minigun/issues"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
test = "tests.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "minigun/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["minigun"]

[tool.hatch.build.targets.wheel]
packages = ["minigun"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.mypy]
mypy_path = "stubs"