[project]
name = "minigun-soren-n"
version = "0.4.12"
description = "A library for property-based testing of Python programs"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Soren Norbaek", email = "sorennorbaek@gmail.com" }
]
keywords = [
    "property-based testing",
    "testing",
    "python",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
dependencies = [
    "returns>=0.25.0",
    "tqdm>=4.67.1",
    "typeset-soren-n>=2.0.8",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/soren-n/minigun"
Documentation = "https://minigun.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/soren-n/minigun/issues"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
quality = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "coverage>=7.6.0",
]

[project.scripts]
test = "tests.main:test"
minigun-test = "minigun.cli:main"
format = "scripts.quality_gates:format"
lint = "scripts.quality_gates:lint"
type-check = "scripts.quality_gates:type_check"
test-with-coverage = "scripts.quality_gates:test_with_coverage"
quality-check = "scripts.quality_gates:check_all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "minigun/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["minigun"]

[tool.hatch.build.targets.wheel]
packages = ["minigun"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Quality tools configuration
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    __pycache__
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["minigun", "tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B018"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["minigun"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "minigun/__init__.py:__version__",
]
build_command = "uv build"
dist_path = "dist/"
upload_to_PyPI = false
upload_to_release = true
remove_dist = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
    "^(chore|docs|style|refactor|test|build|ci)(?:\\(.+\\))?:",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"
